# backend/routes/paymentRoutes.js
@@ -1,8 +1,5 @@
 const express = require('express');
 const {
-    initializeEsewa,
-    verifyEsewa,
-    renderEsewaForm,
     initializeKhalti,
     verifyKhalti,
     initializeStripe,
@@ -13,17 +10,85 @@ const { protect } = require('../middleware/authMiddleware');
 
 const router = express.Router();
 
-router.post('/initialize-esewa', protect, initializeEsewa);
-router.get('/render-form', renderEsewaForm);
-router.get('/verify-esewa', verifyEsewa);
-
-// Khalti Routes
+/**
+ * @swagger
+ * /api/payment/initialize-khalti:
+ *   post:
+ *     summary: Initialize Khalti payment
+ *     tags: [Payment]
+ *     security:
+ *       - bearerAuth: []
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             required:
+ *               - bookingId
+ *               - amount
+ *             properties:
+ *               bookingId:
+ *                 type: string
+ *               amount:
+ *                 type: number
+ *               appRedirectUrl:
+ *                 type: string
+ *     responses:
+ *       200:
+ *         description: Khalti URL generated
+ */
 router.post('/initialize-khalti', protect, initializeKhalti);
+
+/**
+ * @swagger
+ * /api/payment/verify-khalti:
+ *   get:
+ *     summary: Verify Khalti payment
+ *     tags: [Payment]
+ *     parameters:
+ *       - in: query
+ *         name: pidx
+ *         required: true
+ *         schema:
+ *           type: string
+ *     responses:
+ *       200:
+ *         description: Payment verified
+ */
 router.get('/verify-khalti', verifyKhalti);
 
-// Stripe Routes
+
+
+/**
+ * @swagger
+ * /api/payment/initialize-stripe:
+ *   post:
+ *     summary: Initialize Stripe payment
+ *     tags: [Payment]
+ *     security:
+ *       - bearerAuth: []
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             required:
+ *               - bookingId
+ *               - amount
+ *             properties:
+ *               bookingId:
+ *                 type: string
+ *               amount:
+ *                 type: number
+ *     responses:
+ *       200:
+ *         description: Stripe Session URL generated
+ */
 router.post('/initialize-stripe', protect, initializeStripe);
 router.get('/stripe-success', stripeSuccess);
 router.get('/stripe-cancel', stripeCancel);
+
 
 module.exports = router;
